# trailsbuddy-backend-rust

./: .gitignore  Cargo.toml  README.md  Route_Endpoint_Validation.md  test_preparation.js  test_preparation.sh  upload_test.html
src/: app.rs  constants.rs  database.rs  jwt.rs  lib.rs  main.rs  swagger.rs  utils.rs
src/handlers/: clips.rs  default.rs  global_404.rs  mod.rs  ping.rs  temp_api.rs  user.rs
src/handlers/clip/: add_view.rs  create.rs  get_clip.rs  mod.rs  model.rs
src/handlers/contest/: activate.rs  create.rs  get.rs  mod.rs
src/handlers/favourite/: create.rs  get.rs
src/handlers/movie/: add_view.rs  create.rs  details.rs  get_movie.rs  liked_by_me.rs  mod.rs  model.rs
src/handlers/notification/: clear_noti.rs  create_broadcast_noti.rs  get_noti.rs  mark_read.rs  mod.rs
src/handlers/play_tracker/: answer.rs  finish.rs  get.rs  mod.rs  model.rs  start.rs
src/handlers/question/: create.rs  delete.rs  get.rs  update.rs
src/handlers/upload/: mod.rs  multipart.rs  single.rs
src/handlers/user/: admin_login.rs  check_otp.rs  create.rs  get_leaderboard.rs  helper.rs  login.rs  mod.rs  model.rs  otp.rs  referral.rs  renew_token.rs  update.rs  update_fcm_token.rs  verify.rs
src/handlers/wallet/: add_bal.rs  get_bal.rs  helper.rs  mod.rs  model.rs  pay_contest.rs  withdraw_bal.rs
src/jobs/: cleanup.rs  finalize_contest.rs  mod.rs  notification.rs
src/jobs/finalize_contest/: cancel_contest.rs  credit_prize.rs  finalize_contest_job.rs  finish_contest.rs  mod.rs  push_message.rs
src/jobs/notification/: google_auth_token.rs  mod.rs  notification_job.rs  notification_req.rs  push_message.rs
src/models/: clip.rs  contest.rs  mod.rs  movie.rs  notification.rs  otp.rs  play_tracker.rs  request_schema.rs  response_schema.rs  user.rs  wallet.rs
src/utils/: error_handler.rs  misc.rs  mod.rs  sequence_generator.rs  validation.rs
tests/: root_routes.rs  user_flow.rs  wallet_balance.rs
tests/helper/: helper.rs  mod.rs  user.rs
