[package]
name = "trailsbuddy-backend-rust"
version = "0.1.0"
edition = "2021"
authors = ["Sibaprasad Maiti<sibu.it13@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.4", features = ["headers"]}
dotenvy = "0.15.6"
futures = "0.3"
hyper = {version = "0.14", features = ["full"]}
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = ["full"] }
validator = { version = "0.15", features = ["derive"] }
